# Agentic_AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
1-BasicChatbot/: 1-BasicChatbot.ipynb
2-HumanLoopChatbot/: HumanInTheLoop.ipynb
3-Debugging/: agent.py  debugging.ipynb
4-SimpleMultiAIAgent/: simple_multi_AI_agent.ipynb  supervise_multi_AI_agent.ipynb
5-ExpenseTracker/: README.md  __init__.py  cli.py  config.py  database.py  date_utils.py  demo.py  main.py  models.py  reports.py  requirements.txt  run_web.py  transaction_manager.py  validators.py  web_app.py
5-ExpenseTracker/static/css/: style.css
5-ExpenseTracker/static/js/: app.js
5-ExpenseTracker/templates/: add_transaction.html  base.html  categories.html  dashboard.html  reports.html  transactions.html
5-ExpenseTracker/tests/: __init__.py  test_database.py  test_transaction_manager.py
5-mcpDemoLangchain/: weatherServer.py
6-KBChatbot/: chatbot.py
mcpDemoLangchain/: client.py  mathServer.py
